# VSI_CMSISCV

hello_video_vsi/: hello_video_vsi.cbuild-idx.yml  hello_video_vsi.cbuild-pack.yml  hello_video_vsi.cproject.yml  hello_video_vsi.lcd_out+Corstone_300.cbuild.yml  hello_video_vsi.lcd_out+Corstone_300.cprj  log.txt
hello_video_vsi/RTE/_lcd_out_Corstone_300/: RTE_Components.h
hello_video_vsi/samples/: img_10.tiff
hello_video_vsi/source/application/: app.c  main.c
hello_video_vsi/source/vsi/video_driver/: video_drv.c
hello_video_vsi/source/vsi/video_vsi_py/: arm_vsi4.py  arm_vsi6.py
hello_video_vsi/tmp/hello_video_vsi/Corstone_300/lcd_out/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
